--- a/apps/app_main/pubspec.yaml
+++ b/apps/app_main/pubspec.yaml
@@ -1,3 +1,4 @@
+resolution: workspace
 name: modular_app
 description: Modular App.
 
@@ -6,7 +7,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.4
+  sdk: ^3.8.0
 
 dependencies:
   flutter:
@@ -15,7 +16,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   hydrated_bloc: ^9.1.5
   path_provider: ^2.1.5
-  flutter_modular: ^6.3.4
+  flutter_modular: ^6.4.1
   safe_device: ^1.1.9
   common_presentation: ^0.0.1
   features_home_presentation: ^0.0.1
@@ -33,7 +34,6 @@ dependencies:
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
-  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
