--- a/packages/common/data/pubspec.yaml
+++ b/packages/common/data/pubspec.yaml
@@ -1,20 +1,20 @@
+resolution: workspace
 name: common_data
 description: "A new Flutter package project."
 version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: ^3.5.4
+  sdk: ^3.8.0
 
 dependencies:
   flutter:
     sdk: flutter
-  dio: ^5.7.0
+  dio: ^5.9.0
   dio_cache_interceptor: ^3.5.1
   flutter_secure_storage: ^9.2.2
   common_domain: ^0.0.1
 
 dev_dependencies:
-  flutter_lints: ^5.0.0
 
 flutter:
