--- a/packages/common/domain/pubspec.yaml
+++ b/packages/common/domain/pubspec.yaml
@@ -1,10 +1,11 @@
+resolution: workspace
 name: common_domain
 description: A new Flutter package project.
 version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: ^3.5.4
+  sdk: ^3.8.0
 
 dependencies:
   flutter:
@@ -13,6 +14,5 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
 
 flutter:
