--- a/packages/common/presentation/pubspec.yaml
+++ b/packages/common/presentation/pubspec.yaml
@@ -1,17 +1,18 @@
+resolution: workspace
 name: common_presentation
 description: A new Flutter package project.
 version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: ^3.5.4
+  sdk: ^3.8.0
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
+  intl: ^0.20.2
   flutter_bloc: ^8.1.6
   internet_connection_checker_plus: ^2.7.0
   shimmer: ^3.0.0
@@ -20,7 +21,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
 
 flutter:
   generate: true
