--- a/packages/features/experiments/presentation/pubspec.yaml
+++ b/packages/features/experiments/presentation/pubspec.yaml
@@ -1,15 +1,15 @@
+resolution: workspace
 name: features_experiments_presentation
 description: "A new Flutter package project."
 version: 0.0.1
-homepage:
 
 environment:
-  sdk: ^3.5.4
+  sdk: ^3.8.0
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_modular: ^6.3.4
+  flutter_modular: ^6.4.1
   flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
