--- a/packages/features/firebase_chat/presentation/pubspec.yaml
+++ b/packages/features/firebase_chat/presentation/pubspec.yaml
@@ -1,10 +1,10 @@
+resolution: workspace
 name: features_firebase_chat_presentation
 description: "A new Flutter package project."
 version: 0.0.1
-homepage:
 
 environment:
-  sdk: ^3.5.4
+  sdk: ^3.8.0
 
 dependencies:
   common_presentation: ^0.0.1
@@ -16,9 +16,9 @@ dependencies:
   flutter_chat_ui: ^1.6.15
   flutter_firebase_chat_core: ^1.6.8
   flutter_local_notifications: ^18.0.1
-  flutter_modular: ^6.3.4
-  widgets_modifiers: ^0.3.42
-
+  flutter_modular: ^6.4.1
+  flutter_view_modifiers: 0.0.9
+  
 dev_dependencies:
   flutter_lints: ^5.0.0
 
