--- a/packages/features/forms/presentation/pubspec.yaml
+++ b/packages/features/forms/presentation/pubspec.yaml
@@ -1,29 +1,29 @@
+resolution: workspace
 name: features_forms_presentation
 description: "A new Flutter package project."
 version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: ^3.5.4
+  sdk: ^3.8.0
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
+  intl: ^0.20.2
   common_presentation: ^0.0.1
   flutter_bloc: ^8.1.6
-  flutter_modular: ^6.3.4
+  flutter_modular: ^6.4.1
   formz: ^0.8.0
   freezed_annotation: ^2.4.4
-  file_picker: ^8.1.7
+  file_picker: ^10.3.3
   rxdart: ^0.28.0
   image_picker: ^1.1.2
-  widgets_modifiers: ^0.3.42
-
+  flutter_view_modifiers: 0.0.9
+  
 dev_dependencies:
-  flutter_lints: ^5.0.0
   build_runner: ^2.4.14
   freezed: ^2.5.7
 
