--- a/packages/features/home/presentation/pubspec.yaml
+++ b/packages/features/home/presentation/pubspec.yaml
@@ -1,19 +1,20 @@
+resolution: workspace
 name: features_home_presentation
 description: A new Flutter package project.
 version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: ^3.5.4
+  sdk: ^3.8.0
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
+  intl: ^0.20.2
   flutter_bloc: ^8.1.6
-  flutter_modular: ^6.3.4
+  flutter_modular: ^6.4.1
   common_presentation: ^0.0.1
   features_weather_presentation: ^0.0.1
   features_reddit_posts_presentation: ^0.0.1
@@ -22,12 +23,11 @@ dependencies:
   features_experiments_presentation: ^0.0.1
   features_stackoverflow_presentation: ^0.0.1
   features_firebase_chat_presentation: ^0.0.1
-  widgets_modifiers: ^0.3.42
-
+  flutter_view_modifiers: 0.0.9
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
 
 flutter:
   generate: true
