--- a/packages/features/reddit_posts/data/pubspec.yaml
+++ b/packages/features/reddit_posts/data/pubspec.yaml
@@ -1,10 +1,11 @@
+resolution: workspace
 name: features_reddit_posts_data
 description: A new Flutter package project.
 version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: ^3.5.4
+  sdk: ^3.8.0
 
 dependencies:
   flutter:
@@ -12,18 +13,17 @@ dependencies:
   features_reddit_posts_domain: ^0.0.1
   common_data: ^0.0.1
   common_domain: ^0.0.1
-  flutter_modular: ^6.3.4
+  flutter_modular: ^6.4.1
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
   retrofit: ^4.4.2
-  dio: ^5.7.0
+  dio: ^5.9.0
   drift: ^2.23.0 # For web after changing version run sh scripts/download_drift_for_web.sh
   drift_flutter: ^0.2.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
   build_runner: ^2.4.14
   freezed: ^2.5.7
   json_serializable: ^6.8.0
