--- a/packages/features/reddit_posts/presentation/pubspec.yaml
+++ b/packages/features/reddit_posts/presentation/pubspec.yaml
@@ -1,29 +1,29 @@
+resolution: workspace
 name: features_reddit_posts_presentation
 description: A new Flutter package project.
 version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: ^3.5.4
+  sdk: ^3.8.0
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
+  intl: ^0.20.2
   features_reddit_posts_domain: ^0.0.1
   common_presentation: ^0.0.1
   common_domain: ^0.0.1
   flutter_bloc: ^8.1.6
-  flutter_modular: ^6.3.4
+  flutter_modular: ^6.4.1
   transparent_image: 2.0.1
-  widgets_modifiers: ^0.3.42
-
+  flutter_view_modifiers: 0.0.9
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
   build_runner: ^2.4.14
 
 flutter:
