--- a/packages/features/stackoverflow/presentation/pubspec.yaml
+++ b/packages/features/stackoverflow/presentation/pubspec.yaml
@@ -1,17 +1,18 @@
+resolution: workspace
 name: features_stackoverflow_presentation
 description: "A new Flutter package project."
 version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: ^3.5.4
+  sdk: ^3.8.0
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_modular: ^6.3.4
-  dio: ^5.7.0
-  flutter_hooks: ^0.20.5
+  flutter_modular: ^6.4.1
+  dio: ^5.9.0
+  flutter_hooks: ^0.21.3+1
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
   hooks_riverpod: ^2.6.1
@@ -19,7 +20,6 @@ dependencies:
   riverpod_annotation: ^2.6.1
 
 dev_dependencies:
-  flutter_lints: ^5.0.0
   build_runner: ^2.4.14
   freezed: ^2.5.7
   json_serializable: ^6.8.0
