--- a/packages/features/weather/presentation/pubspec.yaml
+++ b/packages/features/weather/presentation/pubspec.yaml
@@ -1,22 +1,23 @@
+resolution: workspace
 name: features_weather_presentation
 description: A new Flutter package project.
 version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: ^3.5.4
+  sdk: ^3.8.0
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
+  intl: ^0.20.2
   features_weather_domain: ^0.0.1
   common_presentation: ^0.0.1
   common_domain: ^0.0.1
   flutter_bloc: ^8.1.6
-  flutter_modular: ^6.3.4
+  flutter_modular: ^6.4.1
   geolocator: ^13.0.2
   rxdart: ^0.28.0
 
@@ -28,7 +29,6 @@ dev_dependencies:
 
   hydrated_bloc: ^9.1.5
 
-  flutter_lints: ^5.0.0
 
 flutter:
   generate: true
