--- a/packages/features/webview/presentation/pubspec.yaml
+++ b/packages/features/webview/presentation/pubspec.yaml
@@ -1,29 +1,28 @@
+resolution: workspace
 name: features_webview_presentation
 description: "A new Flutter package project."
 version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: ^3.5.4
+  sdk: ^3.8.0
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
+  intl: ^0.20.2
   common_presentation: ^0.0.1
-  flutter_modular: ^6.3.4
-  widgets_modifiers: ^0.3.42
+  flutter_modular: ^6.4.1
   path_provider: ^2.1.5
   url_launcher: ^6.3.1
   flutter_inappwebview: ^6.1.5
   open_file: ^3.5.10
   mime: ^2.0.0
-  file_picker: ^8.1.7
+  file_picker: ^10.3.3
 
 dev_dependencies:
-  flutter_lints: ^5.0.0
 
 flutter:
   generate: true
